--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "edition": "octane"
   },
   "devDependencies": {
+    "@appuniversum/appuniversum": "^1.2.0",
     "@appuniversum/ember-appuniversum": "1.6.0",
     "@codemirror/basic-setup": "^0.20.0",
     "@codemirror/lang-html": "^0.20.0",
