--- a/package.json
+++ b/package.json
@@ -55,7 +55,7 @@
     "@kanselarij-vlaanderen/au-kaleidos-css": "2.6.0",
     "@kanselarij-vlaanderen/au-kaleidos-icons": "3.0.1",
     "@lblod/ember-acmidm-login": "~1.3.0",
-    "@lblod/ember-mock-login": "^0.5.0-beta",
+    "@lblod/ember-mock-login": "^0.7.0",
     "@lblod/ember-rdfa-editor": "0.59.1",
     "@lblod/ember-rdfa-editor-plugin-system-dispatcher": "^0.5.8",
     "@lblod/ember-vo-webuniversum-data-table": "^1.0.0",
