--- a/Dockerfile.ci
+++ b/Dockerfile.ci
@@ -8,12 +8,11 @@ RUN CYPRESS_INSTALL_BINARY=0 npm install
 COPY . .
 RUN DEPLOY_ENV=test ember build --environment=cypress-test
 
-FROM semtech/ember-proxy-service:1.5.1
+FROM semtech/static-file-service:0.2.0
 
-ENV STATIC_FOLDERS_REGEX="^/(assets|fonts|files|@appuniversum)/"
 ENV EMBER_OAUTH_LOGOUT_URL="/mock-login"
 
-COPY ./proxy/torii-authorization.conf /config/torii-authorization.conf
+COPY ./proxy/compression.conf /config/compression.conf
 COPY ./proxy/file-upload.conf /config/file-upload.conf
 COPY ./proxy/file-download.conf /config/file-download.conf
 
