--- a/package.json
+++ b/package.json
@@ -100,7 +100,7 @@
     "ember-file-upload": "5.0.0-beta.8",
     "ember-flatpickr": "^3.2.2",
     "ember-functions-as-helper-polyfill": "^2.1.1",
-    "ember-in-viewport": "^4.0.0",
+    "ember-in-viewport": "4.0.2",
     "ember-inflector": "^4.0.1",
     "ember-intl": "^5.0.0",
     "ember-link": "^1.3.1",
