--- a/package.json
+++ b/package.json
@@ -131,6 +131,7 @@
     "ember-template-lint-plugin-prettier": "^2.0.1",
     "ember-test-selectors": "^6.0.0",
     "ember-tooltips": "^3.4.5",
+    "ember-truth-helpers": "^3.1.1",
     "ember-unused-components": "git+https://github.com/MikiDi/ember-unused-components.git#9163900f1975a7ac03994b8af9ef2f7a2f534d4f",
     "ember-useragent": "^0.11.0",
     "eslint": "^7.32.0",
