ci: add networks key
We did this for the frontend, maybe we need to do this for the
identifier too. But I'm not sure why it's there to begin with, I think
it should basically be a no-op. We'll see though.

--- a/ci/docker-compose.override.yml
+++ b/ci/docker-compose.override.yml
@@ -6,6 +6,9 @@ services:
       - default
     build: ../.
     user: ${HOST_UID_GID}
+  identifier:
+    networks:
+      - default
   elasticsearch:
     volumes:
       - /usr/share/elasticsearch/data
