--- a/Dockerfile.ci
+++ b/Dockerfile.ci
@@ -6,6 +6,7 @@ WORKDIR /app
 COPY package.json .
 RUN CYPRESS_INSTALL_BINARY=0 npm install
 COPY . .
+
 RUN DEPLOY_ENV=test ember build --environment=cypress-test
 
 FROM semtech/static-file-service:0.2.0
@@ -16,4 +17,4 @@ COPY ./proxy/compression.conf /config/compression.conf
 COPY ./proxy/file-upload.conf /config/file-upload.conf
 COPY ./proxy/file-download.conf /config/file-download.conf
 
-COPY --from=builder /app/dist /app
+COPY --from=builder /app/dist /data
