--- a/Dockerfile.ci
+++ b/Dockerfile.ci
@@ -1,11 +1,13 @@
-FROM madnificent/ember:3.26.1 as builder
+FROM madnificent/ember:3.28.5 as builder
 
 LABEL maintainer="info@redpencil.io"
 
 WORKDIR /app
+COPY .npmrc .
 COPY package.json .
 RUN CYPRESS_INSTALL_BINARY=0 npm install
 COPY . .
+
 RUN DEPLOY_ENV=test ember build --environment=cypress-test
 
 FROM semtech/static-file-service:0.2.0
@@ -16,4 +18,4 @@ COPY ./proxy/compression.conf /config/compression.conf
 COPY ./proxy/file-upload.conf /config/file-upload.conf
 COPY ./proxy/file-download.conf /config/file-download.conf
 
-COPY --from=builder /app/dist /app
+COPY --from=builder /app/dist /data
