--- a/package.json
+++ b/package.json
@@ -80,7 +80,6 @@
     "ember-cli-head": "^2.0.0",
     "ember-cli-htmlbars": "^6.0.1",
     "ember-cli-inject-live-reload": "^2.1.0",
-    "ember-cli-sanitize-html": "^2.0.3",
     "ember-cli-sass": "^8.0.1",
     "ember-cli-shims": "^1.2.0",
     "ember-cli-sri": "^2.1.1",
@@ -148,6 +147,7 @@
     "qunit-dom": "^1.6.0",
     "release-it": "^14.5.1",
     "sanitize-filename": "^1.6.3",
+    "sanitize-html": "^2.8.0",
     "sass": "^1.49.7",
     "tracked-built-ins": "^2.0.1",
     "webpack": "^5.64.3",
