--- a/package.json
+++ b/package.json
@@ -112,7 +112,7 @@
     "ember-plausible": "^0.1.1",
     "ember-power-select": "^5.0.4",
     "ember-prism": "^0.7.0",
-    "ember-promise-helpers": "^1.0.9",
+    "ember-promise-helpers": "2.0.0",
     "ember-qunit": "^5.1.5",
     "ember-resolver": "^8.0.3",
     "ember-resources": "^5.6.0",
