--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "build": "ember build --environment=production",
     "design": "ember serve --proxy=https://kaleidos-dev.vlaanderen.be",
     "design-all": "npm-run-all lint:hbs lint:js design",
-    "lint": "npm-run-all --aggregate-output --continue-on-error --parallel 'lint:!(fix)'",
+    "lint": "npm-run-all --aggregate-output --continue-on-error --parallel \"lint:!(fix)\"",
     "lint:fix": "npm-run-all --aggregate-output --continue-on-error --parallel lint:*:fix",
     "lint:hbs": "ember-template-lint .",
     "lint:hbs:fix": "ember-template-lint . --fix",
@@ -47,14 +47,15 @@
     "@codemirror/basic-setup": "^0.20.0",
     "@codemirror/lang-html": "^0.20.0",
     "@codemirror/lang-xml": "^0.20.0",
+    "@ember/jquery": "^2.0.0",
     "@ember/optional-features": "^2.0.0",
     "@ember/render-modifiers": "^2.0.0",
-    "@ember/test-helpers": "^2.6.0",
-    "@glimmer/component": "^1.0.4",
-    "@glimmer/tracking": "^1.0.4",
+    "@ember/test-helpers": "^2.7.0",
+    "@glimmer/component": "^1.1.2",
+    "@glimmer/tracking": "^1.1.2",
     "@kanselarij-vlaanderen/au-kaleidos-css": "3.1.0",
     "@kanselarij-vlaanderen/au-kaleidos-icons": "3.0.1",
-    "@lblod/ember-acmidm-login": "~1.3.0",
+    "@lblod/ember-acmidm-login": "git+https://github.com/lblod/ember-acmidm-login.git#246e22c163178ad0c302eaca4d37667534529f7b",
     "@lblod/ember-mock-login": "^0.7.0",
     "@lblod/ember-rdfa-editor": "0.59.1",
     "@lblod/ember-vo-webuniversum-data-table": "^1.0.0",
@@ -69,19 +70,18 @@
     "date-fns": "^2.29.0",
     "dayjs": "^1.10.7",
     "ember-attacher": "git+https://github.com/erikap/ember-attacher.git#7697e098c911a5224557ec464d176f600dfe1d2f",
-    "ember-auto-import": "^2.0.0",
-    "ember-cli": "~3.28.5",
+    "ember-auto-import": "^2.4.1",
+    "ember-cli": "~4.4.0",
     "ember-cli-app-version": "^5.0.0",
     "ember-cli-autoprefixer": "^1.0.0",
     "ember-cli-babel": "^7.26.11",
     "ember-cli-cjs-transform": "^2.0.0",
-    "ember-cli-dependency-checker": "^3.2.0",
+    "ember-cli-dependency-checker": "^3.3.1",
     "ember-cli-dependency-lint": "^1.1.3",
     "ember-cli-head": "^2.0.0",
     "ember-cli-htmlbars": "^6.0.1",
     "ember-cli-inject-live-reload": "^2.1.0",
     "ember-cli-sass": "^8.0.1",
-    "ember-cli-shims": "^1.2.0",
     "ember-cli-sri": "^2.1.1",
     "ember-cli-string-helpers": "^6.1.0",
     "ember-cli-terser": "^4.0.2",
@@ -90,8 +90,8 @@
     "ember-code-snippet": "^3.0.0",
     "ember-composable-helpers": "^4.4.1",
     "ember-concurrency": "^2.2.1",
-    "ember-data": "~3.28.8",
-    "ember-data-storefront": "^0.17.2",
+    "ember-data": "~4.4.0",
+    "ember-data-storefront": "0.18.2-ember4.0",
     "ember-element-helper": "^0.6.0",
     "ember-export-application-global": "^2.0.1",
     "ember-fetch": "^8.1.1",
@@ -108,7 +108,7 @@
     "ember-moment": "^10.0.0",
     "ember-mu-transform-helpers": "^2.1.2",
     "ember-named-blocks-polyfill": "^0.2.4",
-    "ember-page-title": "^6.2.2",
+    "ember-page-title": "^7.0.0",
     "ember-plausible": "^0.1.1",
     "ember-power-select": "^5.0.4",
     "ember-prism": "^0.7.0",
@@ -119,40 +119,41 @@
     "ember-responsive": "^3.0.6",
     "ember-router-service-refresh-polyfill": "^1.0.1",
     "ember-set-helper": "^2.0.1",
-    "ember-sortable": "^2.4.0",
-    "ember-source": "~3.28.8",
+    "ember-sortable": "^4.0.3",
+    "ember-source": "~4.4.0",
     "ember-svg-jar": "^2.3.4",
     "ember-tag-input": "git+https://github.com/kanselarij-vlaanderen/ember-tag-input.git#6f7d67f23274e2ebe23f8e9619353d35de94b516",
-    "ember-template-lint": "^3.15.0",
+    "ember-template-lint": "^4.8.0",
     "ember-template-lint-plugin-prettier": "^2.0.1",
     "ember-test-selectors": "^6.0.0",
     "ember-tooltips": "^3.4.5",
     "ember-unused-components": "git+https://github.com/MikiDi/ember-unused-components.git#9163900f1975a7ac03994b8af9ef2f7a2f534d4f",
-    "ember-useragent": "^0.11.0",
+    "ember-useragent": "^0.12.0",
     "eslint": "^7.32.0",
-    "eslint-config-prettier": "^8.3.0",
+    "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-cypress": "^2.11.1",
-    "eslint-plugin-ember": "10.5.8",
+    "eslint-plugin-ember": "10.6.1",
     "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-prettier": "^3.4.1",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-qunit": "^7.2.0",
     "flatpickr": "^4.6.6",
     "loader.js": "^4.7.0",
     "lodash.invert": "^4.3.0",
     "marked": "^2.0.0",
     "moment": "2.29.1",
     "npm-run-all": "^4.1.5",
-    "prettier": "^2.5.1",
-    "qunit": "^2.17.0",
-    "qunit-dom": "^1.6.0",
+    "prettier": "^2.6.2",
+    "qunit": "^2.19.1",
+    "qunit-dom": "^2.0.0",
     "release-it": "^14.5.1",
     "sanitize-filename": "^1.6.3",
     "sanitize-html": "^2.8.0",
     "sass": "^1.49.7",
     "tracked-built-ins": "^2.0.1",
-    "webpack": "^5.64.3",
+    "webpack": "^5.72.1",
     "xml-formatter": "^2.6.1"
   },
   "engines": {
-    "node": "12 || 14 || >= 16"
+    "node": "12.* || 14.* || >= 16"
   }
 }
