--- a/.eslintignore
+++ b/.eslintignore
@@ -13,11 +13,13 @@
 # misc
 /coverage/
 !.*
+.*/
 .eslintcache
 
 # ember-try
 /.node_modules.ember-try/
 /bower.json.ember-try
+/npm-shrinkwrap.json.ember-try
 /package.json.ember-try
 
 # Jenkins-setup
