--- a/package.json
+++ b/package.json
@@ -54,7 +54,7 @@
     "@glimmer/tracking": "^1.0.4",
     "@kanselarij-vlaanderen/au-kaleidos-css": "3.1.0",
     "@kanselarij-vlaanderen/au-kaleidos-icons": "3.0.1",
-    "@lblod/ember-acmidm-login": "~1.3.0",
+    "@lblod/ember-acmidm-login": "git+https://github.com/ValenberghsSven/ember-acmidm-login.git#75d8aab5839585201a68df4701a15bcfda42b32d",
     "@lblod/ember-mock-login": "^0.7.0",
     "@lblod/ember-rdfa-editor": "0.59.1",
     "@lblod/ember-vo-webuniversum-data-table": "^1.0.0",
@@ -153,5 +153,6 @@
   },
   "engines": {
     "node": "12 || 14 || >= 16"
-  }
+  },
+  "dependencies": {}
 }
