--- a/package.json
+++ b/package.json
@@ -117,6 +117,7 @@
     "ember-resolver": "^8.0.3",
     "ember-resources": "^5.6.1",
     "ember-responsive": "^3.0.6",
+    "ember-router-scroll": "^4.1.2",
     "ember-router-service-refresh-polyfill": "^1.1.0",
     "ember-set-helper": "^2.0.1",
     "ember-sortable": "^2.4.0",
@@ -153,6 +154,5 @@
   },
   "engines": {
     "node": "12 || 14 || >= 16"
-  },
-  "dependencies": {}
+  }
 }
