--- a/.woodpecker/.feature.yml
+++ b/.woodpecker/.feature.yml
@@ -3,7 +3,7 @@ pipeline:
     image: plugins/docker
     settings:
       repo: "${CI_REPO_OWNER%%-vlaanderen}/${CI_REPO_NAME}"
-      tags: "feature-${CI_COMMIT_BRANCH##feature/}"
+      tags: "feature-${CI_COMMIT_BRANCH##DES/enhancement/}"
     secrets: [docker_username, docker_password]
     when:
       event: push
