--- a/package.json
+++ b/package.json
@@ -23,15 +23,15 @@
     "build": "ember build --environment=production",
     "design": "ember serve --proxy=https://kaleidos-dev.vlaanderen.be",
     "design-all": "npm-run-all lint:hbs lint:js design",
-    "lint": "npm-run-all --aggregate-output --continue-on-error --parallel \"lint:!(fix)\"",
-    "lint:fix": "npm-run-all --aggregate-output --continue-on-error --parallel lint:*:fix",
+    "lint": "npm-run-all --print-name --aggregate-output --continue-on-error --parallel \"lint:!(fix)\"",
+    "lint:fix": "npm-run-all --print-name --aggregate-output --continue-on-error --parallel \"lint:*:fix\"",
     "lint:hbs": "ember-template-lint .",
     "lint:hbs:fix": "ember-template-lint . --fix",
     "lint:js": "eslint . --cache",
     "lint:js:fix": "eslint . --fix",
     "start": "ember serve --proxy=http://localhost:80",
     "start-dev": "ember serve --proxy=https://kaleidos-dev.vlaanderen.be",
-    "test": "npm-run-all lint test:*",
+    "test": "npm-run-all --print-name \"lint\" \"test:*\"",
     "test:cypress": "ember serve --environment=cypress-test --proxy=http://localhost",
     "test:ember": "ember test",
     "cypress-local": "make open-cypress-tests",
@@ -70,7 +70,7 @@
     "date-fns": "^2.29.3",
     "dayjs": "^1.11.7",
     "ember-auto-import": "^2.5.0",
-    "ember-cli": "~4.4.1",
+    "ember-cli": "~4.8.0",
     "ember-cli-app-version": "^5.0.0",
     "ember-cli-autoprefixer": "^2.0.0",
     "ember-cli-babel": "^7.26.11",
@@ -90,10 +90,10 @@
     "ember-composable-helpers": "^5.0.0",
     "ember-concurrency": "^2.3.7",
     "ember-copy": "^2.0.1",
-    "ember-data": "~4.5.0",
+    "ember-data": "~4.7.3",
     "ember-data-storefront": "0.18.2-ember4.0",
     "ember-element-helper": "^0.6.1",
-    "ember-fetch": "^8.1.1",
+    "ember-fetch": "^8.1.2",
     "ember-file-upload": "5.0.0-beta.8",
     "ember-flatpickr": "^3.2.3",
     "ember-functions-as-helper-polyfill": "^2.1.1",
@@ -111,17 +111,17 @@
     "ember-power-select": "^5.0.4",
     "ember-prism": "^0.13.0",
     "ember-promise-helpers": "2.0.0",
-    "ember-qunit": "^5.1.5",
+    "ember-qunit": "^6.0.0",
     "ember-resolver": "^8.0.3",
     "ember-resources": "^5.6.1",
     "ember-responsive": "^3.0.6",
     "ember-router-service-refresh-polyfill": "^1.1.0",
     "ember-set-helper": "^2.0.1",
     "ember-sortable": "^4.0.3",
-    "ember-source": "~4.4.4",
+    "ember-source": "~4.8.0",
     "ember-svg-jar": "^2.4.2",
     "ember-tag-input": "git+https://github.com/kanselarij-vlaanderen/ember-tag-input.git#6f7d67f23274e2ebe23f8e9619353d35de94b516",
-    "ember-template-lint": "^4.10.0",
+    "ember-template-lint": "^4.16.1",
     "ember-template-lint-plugin-prettier": "^2.0.1",
     "ember-test-selectors": "^6.0.0",
     "ember-tooltips": "^3.6.0",
@@ -130,10 +130,10 @@
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-cypress": "^2.11.1",
-    "eslint-plugin-ember": "10.6.1",
+    "eslint-plugin-ember": "11.1.0",
     "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin-qunit": "^7.3.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-qunit": "^7.3.1",
     "flatpickr": "^4.6.13",
     "loader.js": "^4.7.0",
     "lodash.invert": "^4.3.0",
@@ -151,6 +151,6 @@
     "xml-formatter": "^3.2.0"
   },
   "engines": {
-    "node": "12.* || 14.* || >= 16"
+    "node": "14.* || 16.* || >= 18"
   }
 }
