--- a/package.json
+++ b/package.json
@@ -135,6 +135,7 @@
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-qunit": "^7.3.1",
     "flatpickr": "^4.6.13",
+    "inputmask": "^5.0.7",
     "loader.js": "^4.7.0",
     "lodash.invert": "^4.3.0",
     "marked": "^4.2.12",
