--- a/.woodpecker/.feature.yml
+++ b/.woodpecker/.feature.yml
@@ -7,4 +7,4 @@ pipeline:
     secrets: [docker_username, docker_password]
 when:
   event: push
-  branch: feature/*
+  branch: [feature/*, DES/*, cypress/*]
