--- a/package.json
+++ b/package.json
@@ -137,6 +137,7 @@
     "html-entities": "^2.3.3",
     "loader.js": "^4.7.0",
     "lodash.invert": "^4.3.0",
+    "lodash.merge": "^4.6.2",
     "marked": "^4.2.12",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.8.3",
