--- a/package.json
+++ b/package.json
@@ -93,7 +93,7 @@
     "ember-data-storefront": "0.18.2-ember4.0",
     "ember-element-helper": "^0.6.1",
     "ember-fetch": "^8.1.2",
-    "ember-file-upload": "5.0.0-beta.8",
+    "ember-file-upload": "7.4.0",
     "ember-flatpickr": "^3.2.3",
     "ember-functions-as-helper-polyfill": "^2.1.1",
     "ember-in-viewport": "4.1.0",
