KAS-4441 add permissions for CI runs and only run 1 spec WIP

--- a/ci/docker-compose.override.yml
+++ b/ci/docker-compose.override.yml
@@ -83,6 +83,8 @@ services:
     user: ${HOST_UID_GID}
   decision-extraction:
     user: ${HOST_UID_GID}
+  minutes-report-generation:
+    user: ${HOST_UID_GID}
   chrome-browser:
     user: ${HOST_UID_GID}
   file-bundling:
