KAS-4537 Update ember-cli from v4.8.0 to v4.12.2
# Conflicts:
#	.ember-cli
#	.eslintrc.js
#	.prettierrc.js
#	app/styles/app.css
#	ember-cli-build.js

--- a/package.json
+++ b/package.json
@@ -23,15 +23,17 @@
     "build": "ember build --environment=production",
     "design": "ember serve --proxy=https://kaleidos-dev.vlaanderen.be",
     "design-all": "npm-run-all lint:hbs lint:js design",
-    "lint": "npm-run-all --print-name --aggregate-output --continue-on-error --parallel \"lint:!(fix)\"",
-    "lint:fix": "npm-run-all --print-name --aggregate-output --continue-on-error --parallel \"lint:*:fix\"",
+    "lint": "concurrently \"npm:lint:*(!fix)\" --names \"lint:\"",
+    "lint:css": "stylelint \"**/*.css\"",
+    "lint:css:fix": "concurrently \"npm:lint:css -- --fix\"",
+    "lint:fix": "concurrently \"npm:lint:*:fix\" --names \"fix:\"",
     "lint:hbs": "ember-template-lint .",
     "lint:hbs:fix": "ember-template-lint . --fix",
     "lint:js": "eslint . --cache",
     "lint:js:fix": "eslint . --fix",
     "start": "ember serve --proxy=http://localhost:80",
     "start-dev": "ember serve --proxy=https://kaleidos-dev.vlaanderen.be",
-    "test": "npm-run-all --print-name \"lint\" \"test:*\"",
+    "test": "concurrently \"npm:lint\" \"npm:test:*\" --names \"lint,test:\"",
     "test:cypress": "ember serve --environment=cypress-test --proxy=http://localhost",
     "test:ember": "ember test",
     "cypress-local": "make open-cypress-tests",
@@ -44,12 +46,15 @@
   "devDependencies": {
     "@appuniversum/appuniversum": "^1.2.0",
     "@appuniversum/ember-appuniversum": "2.18.0",
+    "@babel/eslint-parser": "^7.21.3",
+    "@babel/plugin-proposal-decorators": "^7.21.0",
     "@codemirror/basic-setup": "^0.20.0",
     "@codemirror/lang-html": "^0.20.0",
     "@codemirror/lang-xml": "^0.20.0",
     "@ember/jquery": "^2.0.0",
     "@ember/optional-features": "^2.0.0",
     "@ember/render-modifiers": "^2.0.5",
+    "@ember/string": "^3.0.1",
     "@ember/test-helpers": "^2.9.3",
     "@glimmer/component": "^1.1.2",
     "@glimmer/tracking": "^1.1.2",
@@ -62,15 +67,15 @@
     "@ljharb/eslint-config": "^21.0.1",
     "@typescript-eslint/parser": "^5.48.2",
     "alphabet": "^1.0.0",
-    "babel-eslint": "^10.1.0",
     "broccoli-asset-rev": "^3.0.0",
     "broccoli-funnel": "^3.0.8",
+    "concurrently": "^8.0.1",
     "cypress": "^12.14.0",
     "date-fns": "^2.29.3",
     "dayjs": "^1.11.7",
-    "ember-auto-import": "^2.5.0",
-    "ember-cli": "~4.8.0",
-    "ember-cli-app-version": "^5.0.0",
+    "ember-auto-import": "^2.6.3",
+    "ember-cli": "~4.12.2",
+    "ember-cli-app-version": "^6.0.0",
     "ember-cli-autoprefixer": "^2.0.0",
     "ember-cli-babel": "^7.26.11",
     "ember-cli-cjs-transform": "^2.0.0",
@@ -89,7 +94,7 @@
     "ember-composable-helpers": "^5.0.0",
     "ember-concurrency": "^2.3.7",
     "ember-copy": "^2.0.1",
-    "ember-data": "~4.8.0",
+    "ember-data": "~4.11.3",
     "ember-element-helper": "^0.6.1",
     "ember-fetch": "^8.1.2",
     "ember-file-upload": "7.4.0",
@@ -101,7 +106,7 @@
     "ember-link": "^2.0.1",
     "ember-load-initializers": "^2.1.2",
     "ember-math-helpers": "^3.0.0",
-    "ember-modifier": "^4.0.0",
+    "ember-modifier": "^4.1.0",
     "ember-mu-transform-helpers": "^2.1.2",
     "ember-named-blocks-polyfill": "^0.2.4",
     "ember-page-title": "^7.0.0",
@@ -109,45 +114,47 @@
     "ember-power-select": "^6.0.2",
     "ember-prism": "^0.13.0",
     "ember-promise-helpers": "2.0.0",
-    "ember-qunit": "^6.0.0",
-    "ember-resolver": "^8.0.3",
+    "ember-qunit": "^6.2.0",
+    "ember-resolver": "^10.0.0",
     "ember-resources": "^5.6.1",
     "ember-responsive": "^3.0.6",
     "ember-router-service-refresh-polyfill": "^1.1.0",
     "ember-set-helper": "^2.0.1",
     "ember-sortable": "^4.0.3",
-    "ember-source": "~4.8.0",
+    "ember-source": "~4.12.0",
     "ember-svg-jar": "^2.4.2",
     "ember-tag-input": "3.1.0",
-    "ember-template-lint": "^4.16.1",
+    "ember-template-lint": "^5.7.2",
     "ember-template-lint-plugin-prettier": "^2.0.1",
     "ember-test-selectors": "^6.0.0",
     "ember-tooltips": "^3.6.0",
     "ember-unused-components": "git+https://github.com/MikiDi/ember-unused-components.git#9163900f1975a7ac03994b8af9ef2f7a2f534d4f",
     "ember-useragent": "^0.12.0",
-    "eslint": "^7.32.0",
-    "eslint-config-prettier": "^8.5.0",
+    "eslint": "^8.37.0",
+    "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-cypress": "^2.11.1",
-    "eslint-plugin-ember": "11.1.0",
-    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-ember": "11.5.0",
+    "eslint-plugin-n": "^15.7.0",
     "eslint-plugin-prettier": "^4.2.1",
-    "eslint-plugin-qunit": "^7.3.1",
+    "eslint-plugin-qunit": "^7.3.4",
     "flatpickr": "^4.6.13",
     "html-entities": "^2.3.3",
     "loader.js": "^4.7.0",
     "lodash.invert": "^4.3.0",
     "lodash.merge": "^4.6.2",
     "marked": "^4.2.12",
-    "npm-run-all": "^4.1.5",
-    "prettier": "^2.8.3",
-    "qunit": "^2.19.3",
+    "prettier": "^2.8.7",
+    "qunit": "^2.19.4",
     "qunit-dom": "^2.0.0",
     "release-it": "^15.6.0",
     "sanitize-filename": "^1.6.3",
     "sanitize-html": "^2.8.1",
     "sass": "^1.57.7",
-    "tracked-built-ins": "^3.1.0",
-    "webpack": "^5.75.0",
+    "stylelint": "^15.4.0",
+    "stylelint-config-standard": "^32.0.0",
+    "stylelint-prettier": "^3.0.0",
+    "tracked-built-ins": "^3.1.1",
+    "webpack": "^5.78.0",
     "xml-formatter": "^3.2.0"
   },
   "engines": {
