--- a/package.json
+++ b/package.json
@@ -55,7 +55,7 @@
     "@glimmer/tracking": "^1.1.2",
     "@kanselarij-vlaanderen/au-kaleidos-css": "3.15.0",
     "@kanselarij-vlaanderen/au-kaleidos-icons": "3.0.1",
-    "@lblod/ember-acmidm-login": "git+https://github.com/ValenberghsSven/ember-acmidm-login.git#75d8aab5839585201a68df4701a15bcfda42b32d",
+    "@lblod/ember-acmidm-login": "^2.0.0",
     "@lblod/ember-mock-login": "^0.7.0",
     "@lblod/ember-rdfa-editor": "git+https://github.com/brenner-company/ember-rdfa-editor.git#aed7406f3b8ca1f373fa504b029417ff03c27bf4",
     "@lblod/ember-vo-webuniversum-data-table": "^1.0.0",
@@ -115,6 +115,7 @@
     "ember-responsive": "^3.0.6",
     "ember-router-service-refresh-polyfill": "^1.1.0",
     "ember-set-helper": "^2.0.1",
+    "ember-simple-auth": "^6.0.0",
     "ember-sortable": "^4.0.3",
     "ember-source": "~4.8.0",
     "ember-svg-jar": "^2.4.2",
