--- a/package.json
+++ b/package.json
@@ -23,15 +23,15 @@
     "build": "ember build --environment=production",
     "design": "ember serve --proxy=https://kaleidos-dev.vlaanderen.be",
     "design-all": "npm-run-all lint:hbs lint:js design",
-    "lint": "concurrently \"npm:lint:*(!fix)\" --names \"lint:\"",
-    "lint:fix": "concurrently \"npm:lint:*:fix\" --names \"fix:\"",
+    "lint": "npm-run-all --print-name --aggregate-output --continue-on-error --parallel \"lint:!(fix)\"",
+    "lint:fix": "npm-run-all --print-name --aggregate-output --continue-on-error --parallel \"lint:*:fix\"",
     "lint:hbs": "ember-template-lint .",
     "lint:hbs:fix": "ember-template-lint . --fix",
     "lint:js": "eslint . --cache",
     "lint:js:fix": "eslint . --fix",
     "start": "ember serve --proxy=http://localhost:80",
     "start-dev": "ember serve --proxy=https://kaleidos-dev.vlaanderen.be",
-    "test": "concurrently \"npm:lint\" \"npm:test:*\" --names \"lint,test:\"",
+    "test": "npm-run-all --print-name \"lint\" \"test:*\"",
     "test:cypress": "ember serve --environment=cypress-test --proxy=http://localhost",
     "test:ember": "ember test",
     "cypress-local": "make open-cypress-tests",
@@ -67,7 +67,6 @@
     "alphabet": "^1.0.0",
     "broccoli-asset-rev": "^3.0.0",
     "broccoli-funnel": "^3.0.8",
-    "concurrently": "^8.0.1",
     "cypress": "^12.14.0",
     "date-fns": "^2.29.3",
     "dayjs": "^1.11.7",
@@ -141,6 +140,7 @@
     "lodash.invert": "^4.3.0",
     "lodash.merge": "^4.6.2",
     "marked": "^4.2.12",
+    "npm-run-all": "^4.1.5",
     "prettier": "^2.8.7",
     "qunit": "^2.19.4",
     "qunit-dom": "^2.0.0",
