--- a/package.json
+++ b/package.json
@@ -111,7 +111,7 @@
     "ember-promise-helpers": "2.0.0",
     "ember-qunit": "^6.0.0",
     "ember-resolver": "^8.0.3",
-    "ember-resources": "^5.6.1",
+    "ember-resources": "^7.0.0",
     "ember-responsive": "^3.0.6",
     "ember-router-service-refresh-polyfill": "^1.1.0",
     "ember-set-helper": "^2.0.1",
@@ -142,6 +142,7 @@
     "prettier": "^2.8.3",
     "qunit": "^2.19.3",
     "qunit-dom": "^2.0.0",
+    "reactiveweb": "^1.2.2",
     "release-it": "^15.6.0",
     "sanitize-filename": "^1.6.3",
     "sanitize-html": "^2.8.1",
