add decision-result-pill loading state

--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "cypress": "^12.14.0",
     "date-fns": "^2.29.3",
     "dayjs": "^1.11.7",
+    "ember-async-data": "^1.0.3",
     "ember-auto-import": "^2.5.0",
     "ember-cli": "~4.8.0",
     "ember-cli-app-version": "^5.0.0",
