--- a/ci/docker-compose.override.yml
+++ b/ci/docker-compose.override.yml
@@ -79,6 +79,10 @@ services:
   mail-delivery:
     entrypoint: "echo 'service disabled'"
     restart: "no"
+  docx-conversion:
+    # old version that uses libreoffice for conversion instead of azure
+    image: kanselarij/docx-conversion-service:0.1.0
+    user: ${HOST_UID_GID}
   decision-report-generation:
     user: ${HOST_UID_GID}
   decision-extraction:
