--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
   },
   "devDependencies": {
     "@appuniversum/appuniversum": "^1.2.0",
-    "@appuniversum/ember-appuniversum": "2.18.0",
+    "@appuniversum/ember-appuniversum": "3.3.1",
     "@babel/eslint-parser": "^7.21.3",
     "@babel/plugin-proposal-decorators": "^7.21.0",
     "@codemirror/basic-setup": "^0.20.0",
@@ -53,7 +53,7 @@
     "@ember/optional-features": "^2.0.0",
     "@ember/render-modifiers": "^2.0.5",
     "@ember/string": "^3.0.1",
-    "@ember/test-helpers": "^2.9.3",
+    "@ember/test-helpers": "^2.9.4",
     "@glimmer/component": "^1.1.2",
     "@glimmer/tracking": "^1.1.2",
     "@kanselarij-vlaanderen/au-kaleidos-css": "3.15.0",
@@ -94,7 +94,7 @@
     "ember-data": "~4.11.3",
     "ember-element-helper": "^0.6.1",
     "ember-fetch": "^8.1.2",
-    "ember-file-upload": "7.4.0",
+    "ember-file-upload": "^8.4.0",
     "ember-flatpickr": "^3.2.3",
     "ember-functions-as-helper-polyfill": "^2.1.1",
     "ember-in-viewport": "4.1.0",
@@ -148,7 +148,7 @@
     "sanitize-filename": "^1.6.3",
     "sanitize-html": "^2.8.1",
     "sass": "^1.57.7",
-    "tracked-built-ins": "^3.1.1",
+    "tracked-built-ins": "^3.3.0",
     "webpack": "^5.78.0",
     "xml-formatter": "^3.2.0"
   },
