KAS-4632 dependency hell fix needs lock file

--- a/package.json
+++ b/package.json
@@ -154,6 +154,9 @@
     "webpack": "^5.78.0",
     "xml-formatter": "^3.2.0"
   },
+  "overrides": {
+    "babel-plugin-ember-template-compilation": "2.2.1"
+  },
   "engines": {
     "node": "14.* || 16.* || >= 18"
   }
